tests/good/types/1.moc
Int main() {
    Int i = 0;
    Int j = 42;

    Char c = 'a';

    Char* s = "enseeiht";
    Int* ip = NULL;

    return j;
}

