tests/bad/types/1.moc
int main() {
    int i = '7';
    int j = "net7";

    char c = 7;

    char* s = 0;
}

